# loop_closures

./: .gitignore  CMakeLists.txt  caffe-version.h  distance.csv  estimate_truth.ppm  findNearestNeighbors  forward_propagate  groundtruth.csv  res.txt  small_distance.csv  small_estimate_truth.ppm  small_groundtruth.csv  test_deepFeatures
scripts/: LogF.txt  LogI.txt  Untitled.ipynb  Untitled1.ipynb  precision_recall.ipynb  precision_recall.py  read_from_lmdb.ipynb  read_lmdb_2.ipynb  visualizing_loop_cosures.ipynb
scripts/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  precision_recall-checkpoint.ipynb  read_from_lmdb-checkpoint.ipynb  read_lmdb_2-checkpoint.ipynb  visualize_rtabmap_loop_closures-checkpoint.ipynb  visualizing_loop_cosures-checkpoint.ipynb
src/: CaffeFeatExtractor.hpp  DeepFeatures.cpp  DeepFeatures.h  caffe-version.h.in  convert_loop_closure_siamese_data.cpp  findNearestNeighbors.cpp  forward_propagate.cpp  simple_loops.cpp  test_deepFeatures.cpp
